[WIP] fix link color on high-contrast theme.

--- a/app/javascript/styles/contrast/diff.scss
+++ b/app/javascript/styles/contrast/diff.scss
@@ -12,3 +12,10 @@
     }
   }
 }
+
+.status__content,
+.reply-indicator__content {
+  a {
+    color: $ui-highlight-color;
+  }
+}
